lib/tests/fixtures/compiler/parser/break_in_site.baseline
Error: break_in_site.pp:3:9: break statement cannot be used inside a site statement.
  break
  ^~~~~
